@@ -174,14 +174,6 @@ inline void TableSupport::hline() const
     hline(d_nRows);
 }
 
-inline void TableSupport::vline(size_t col) const
-{}
-
-inline void TableSupport::vline() const
-{
-    out() << '\n';
-}
-
 inline TableSupport::SizeBeginEndMap const &TableSupport::hlineMap() const
 {
     return d_hline;
