@@ -1,9 +1,18 @@
-bobcat (1.14.3)
+bobcat (1.15.0)
 
   * TO BE UPLOADED
 
   * The Glob constructor no longer requires a static_cast when multiple flags
     are specified for its second argument.
+
+  * The TableSupport class's vline(col) member now writes separator[col] to
+    the output stream if it is available. If it is not available, no action is
+    performed. Similarly, vline() now writes the trailing separator as well as
+    a newline character.
+
+  * The Milter class interface  was adapted to libmilter-dev 8.14.1-2, 
+    affecting milter/milter and milter/initialize.cc
+
 
 bobcat (1.14.2)
 
